--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.6.1
+  get:
   dots_indicator: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
